<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="os_version">Os版本：%s</string>
    <string name="app_version">App版本：%s-%s</string>
    <string name="sdk_version">SDK版本：%s</string>
    <string name="firmware_version">固件版本：%s</string>
    <string name="ethernet">Ethernet</string>
    <string name="device">Device</string>
    <string name="launcher">Launcher&amp;Settings</string>
    <string name="screen_bright">ScreenBrightness</string>
    <string name="adb">Adb</string>
    <string name="system_bar">SystemBar</string>
    <string name="system_time">SystemTime</string>
    <string name="screen_rotation">ScreenRotation</string>
    <string name="application_manager">ApplicationManager</string>
    <string name="screen_shot">Screenshot</string>
    <string name="ntp_time">NTP Time</string>

    <string name="ethernet_enable">以太网状态：</string>
    <string name="ethernet_mode">IP分配模式：</string>
    <string name="ethernet_mode_static">STATIC</string>
    <string name="ethernet_mode_dhcp">DHCP</string>
    <string name="ethernet_mode_unassigned">UNASSIGNED</string>
    <string name="ethernet_ip">IP地址：</string>
    <string name="ethernet_ip_hint">请输入IP地址</string>
    <string name="ethernet_ip_error">非法的IP地址</string>
    <string name="ethernet_netmask">子网掩码：</string>
    <string name="ethernet_netmask_hint">请输入子网掩码</string>
    <string name="ethernet_netmask_error">非法的子网掩码</string>
    <string name="ethernet_gateway">网关：</string>
    <string name="ethernet_gateway_hint">请输入网关</string>
    <string name="ethernet_gateway_error">非法的网关</string>
    <string name="ethernet_dns1" tools:ignore="Typos">DNS1：</string>
    <string name="ethernet_dns1_hint" tools:ignore="Typos">请输入DNS1</string>
    <string name="ethernet_dns1_error" tools:ignore="Typos">非法的DNS1</string>
    <string name="ethernet_dns2">DNS2：</string>
    <string name="ethernet_dns2_hint">请输入DNS2</string>
    <string name="ethernet_dns2_error">非法的DNS2</string>
    <string name="ethernet_mac">MAC地址：</string>
    <string name="ethernet_get">获取以太网信息</string>
    <string name="ethernet_set_static">设置静态地址</string>
    <string name="ethernet_set_dhcp">设置DHCP</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="take_screenshot">Take Screenshot</string>
    <string name="grant_runtime_permission">Grant Runtime Permission</string>
    <string name="open_app_detail">Open App Detail</string>
    <string name="launcher_component_name">Launcher ComponentName: %s</string>
    <string name="get_launcher">Get Launcher</string>
    <string name="set_launcher">Set Launcher</string>
    <string name="open_launcher_settings">Open Launcher Settings</string>
    <string name="open_system_launcher">Open System Launcher</string>
    <string name="open_system_settings">Open System Settings</string>
    <string name="open_development_settings">Open Development Settings</string>
    <string name="open_display_settings">Open Display Settings</string>
    <string name="screen_off_and_on">Screen off and on after 10 seconds</string>
    <string name="screen_off">Screen Off</string>
    <string name="screen_on">Screen On</string>
    <string name="hint_adb_port">Adb Port (5000 – 65535)</string>
    <string name="placeholder_adb_port">5555</string>
    <string name="get_adb_port">Get Adb Port</string>
    <string name="set_adb_port">Set Adb Port</string>
    <string name="current_adb_port">Adb Port：%d</string>
    <string name="dark_ui">深色主题</string>
    <string name="screen_never_off">屏幕永不休眠</string>
    <string name="auto_brightness">自动调节亮度</string>
    <string name="percent">百分比: %d%%</string>
    <string name="degree_0">0°</string>
    <string name="degree_90">90°</string>
    <string name="degree_180">180°</string>
    <string name="degree_270">270°</string>
    <string name="current_screen_rotation">当前屏幕旋转：%s</string>
    <string name="auto_rotation">自动旋转屏幕</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="current_time_zone">当前时区：%s</string>
    <string name="current_date_time">当前时间：%s</string>
    <string name="open_date_settings">Open Date Settings</string>
    <string name="time_format_24h">Time Format 24H</string>
    <string name="choose_apk_file">Choose Apk File</string>
    <string name="installing">Installing…</string>
    <string name="uninstall">Uninstall</string>
    <string name="clear_user_data">Clear User Data</string>
    <string name="action">Action</string>
    <string name="kill_background_process">Kill Background Process</string>
    <string name="force_stop">Force Stop</string>
    <string name="system">System</string>
    <string name="get_ntp_time">Get Ntp Time</string>
    <string name="hint_please_type_ntp_server">please type ntp server</string>
    <string name="placeholder_ntp_aliyun_com">ntp.aliyun.com</string>
    <string name="got_ntp_time">获取的Ntp Time: %s</string>
    <string name="ignoring_battery_optimizations">Ignoring Battery Optimizations</string>
    <string name="open_battery_optimizations">Open Battery Optimizations</string>
    <string name="open_ethernet_settings">Open Ethernet Settings</string>
</resources>