<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_screen_rotation" />

    <Button
        android:id="@+id/btn_open_display_settings"
        style="@style/PermissionItemBtnStyle"
        android:text="@string/open_display_settings" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/ms_auto_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/auto_rotation"/>

    <Button
        android:id="@+id/btn_degree_0"
        style="@style/PermissionItemBtnStyle"
        android:text="@string/degree_0" />

    <Button
        android:id="@+id/btn_degree_90"
        style="@style/PermissionItemBtnStyle"
        android:text="@string/degree_90" />

    <Button
        android:id="@+id/btn_degree_180"
        style="@style/PermissionItemBtnStyle"
        android:text="@string/degree_180" />

    <Button
        android:id="@+id/btn_degree_270"
        style="@style/PermissionItemBtnStyle"
        android:text="@string/degree_270" />

</LinearLayout>