<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdbActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_open_development_settings"
            style="@style/PermissionItemBtnStyle"
            android:text="@string/open_development_settings" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/ms_adb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/adb" />

        <TextView
            android:id="@+id/tv_adb_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/current_adb_port" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_adb_port"
            app:placeholderText="@string/placeholder_adb_port">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_adb_port"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_get_adb_port"
            style="@style/PermissionItemBtnStyle"
            android:text="@string/get_adb_port" />

        <Button
            android:id="@+id/btn_set_adb_port"
            style="@style/PermissionItemBtnStyle"
            android:text="@string/set_adb_port" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>