<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.NtpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_please_type_ntp_server">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ntp_server"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_ntp_aliyun_com" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_get_ntp_time"
        style="@style/PermissionItemBtnStyle"
        android:text="@string/get_ntp_time" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="@string/current_date_time"/>

    <TextView
        android:id="@+id/tv_ntp_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/got_ntp_time"/>

</LinearLayout>