<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:shapeAppearance="@style/RoundImageStyle" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            tools:text="1.0.0" />

        <TextView
            android:id="@+id/tv_app_package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            tools:text="com.android.settings" />

        <Button
            android:id="@+id/btn_open_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/open_app_detail" />

        <Button
            android:id="@+id/btn_uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uninstall" />

        <Button
            android:id="@+id/btn_kill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kill_background_process" />

        <Button
            android:id="@+id/btn_force_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_stop" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_user_data" />

        <Button
            android:id="@+id/btn_grant_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant_runtime_permission" />

        <View
            android:id="@+id/battery_optimizations_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#33333333"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_open_battery_optimizations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/open_battery_optimizations"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/ms_device_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ignoring_battery_optimizations"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>